# spbu-tt-diff-notify

./: .gitignore  COMMANDS.md  Cargo.toml  LICENSE  README.md  README_eng.md  TODO.md  example.config.json  example.previous_pdf_states.json  example.users.json
.github/workflows/: CI.yml
.sqlx/: query-6eb864374f4ea1d4ffc31ed62e238a84d0cc3476c15db9798cd0417a168f957f.json  query-720d1a6a28d3636dc1a9a4bb9a082af662a60fb100dc6e44ebdec99ced51ff38.json  query-d2be943bf4153d14c3161111b6a9ac8dfe2a8a951c7fac226948461664c56b57.json  query-dfa50dceae7c6b78603cbf60384934cbe437d732ecb0bedf395b9e65fa649aa1.json  query-f6565f1a14b4326e7a8b5a223f5ba3dd1f6ff7d01170a0e1d5d22d9514f6cf50.json
exmpdf/: previous_pdf_states.json  users.json
migrations/: 01_educators.sql
src/: db.rs  helpers.rs  main.rs  models.rs
src/lib/: lib.rs
src/lib/pdf_diff/: helpers.rs  models.rs
src/lib/tt_diff/: helpers.rs  letter_sender.rs  mod.rs  models.rs  run_tool.rs  schedule_getter.rs
src/lib/tt_diff/models/: educator_model.rs
src/lib/tt_diff/tests/: exp_find_diffs_in_events1_1879.txt  exp_find_diffs_in_events1_1928.txt  tests.rs
src/models/: educator_model.rs  user_model.rs
src/tt_diff/: helpers.rs  models.rs
systemd/: spbu-tt-diff-notify.service  spbu-tt-diff-notify.timer
tests/: test.config.json  test.delete_last_event_of_the_last_day.json  test.less_events.json  test.many_days.json  test.many_events.json  test.new_day.json  test.old_day_new_event.json  test.old_day_old_event_new_group.json  test.only_warhol.json  test.users.json  test_tt_diff.rs
