[package]
name = "spbu-tt-diff-notify"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4.5.27", features = ["derive"] }
log = { version = "0.4.25", features = ["std", "serde"] }
env_logger = "0.11.6"
rusqlite = { version = "0.33.0", features = ["bundled"] }
similar = { version = "2.7.0", features = ["serde"] }
lettre = "0.11.11"
figment = { version = "0.10.19", features = ["env", "json"] }
