[package]
name = "spbu-tt-diff-notify"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tt_diff"
path = "src/bin/tt_diff.rs"

[[bin]]
name = "pdf_diff"
path = "src/bin/pdf_diff.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5.27", features = ["derive"] }
log = { version = "0.4.25", features = ["std", "serde"] }
env_logger = "0.11.6"
similar = { version = "2.7.0", features = ["serde"] }
lettre = "0.11.11"
figment = { version = "0.10.19", features = ["env", "json"] }
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
sha2 = "0.10.8"
itertools = "0.13"
mailparse = "0.16.1"
